--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,6 @@
     <string name="setting_summary_images">Enable Network images. Disabling could be useful to save mobile data and to load
     websites faster.</string>
     <string name="setting_title_cookie">Cookies</string>
-    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>
     <string name="setting_summary_cookie">Enable Cookies. Cookies are small text files, which are stored on your device. Websites
     use them for example to store user settings (for example search settings). But they could also be used to collect personal
         user data. Third party cookies (they collect user data for advertising) are always disabled.</string>
@@ -146,15 +145,15 @@
     <string name="clear_summary">All files will be exported to the \"Documents\" directory of your sd-card. Each export will overwrite the
         old one. To restore there must be a file with the right name in the directory.</string>
     <string name="clear_menu_done_all">Done all</string>
-    <string name="clear_title_quit">Clear when application exits</string>
+    <string name="clear_title_quit">Clear on Exit</string>
     <string name="clear_summary_quit">Every time you quit \"FOSS Browser\" all above checked data will be deleted.</string>
     <string name="clear_title_cache">Clear Cache</string>
     <string name="clear_title_cookie">Clear Cookies</string>
+    <string name="clear_summary_cookie">Deletes all cookies, including cookies from whitelisted websites.</string>
     <string name="clear_title_history">Clear History</string>
     <string name="clear_title_siteData">Clear Website Data</string>
     <string name="clear_summary_siteData">Deletes all Indexed DB and Local Storage data.</string>
-
-    <string name="clear_title_deleteDatabase">Delete database</string>
+    <string name="clear_title_deleteDatabase">Delete Database</string>
     <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
 
 
