--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,8 +220,8 @@
     <string name="hint_database">This will delete all your current settings and data. Will you proceed?</string>
 
 
-    <!-- Others setting -->
-    <string name="setting_title_others">Others</string>
+    <!-- About -->
+    <string name="setting_title_about">About</string>
     <string name="setting_title_license">License</string>
     <string name="setting_summary_license">\"FOSS Browser\" is completely free (as in freedom) and open source.</string>
     <string name="setting_title_appSettings">App settings</string>
