--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,6 +279,7 @@
     <string name="toast_close_tab">Do you want to close current tab?</string>
     <string name="toast_closeNotification">Close all opened websites.</string>
     <string name="toast_downloadComplete">Download complete. Open file manager?</string>
+    <string name="toast_attempt_secure">Attempt to reload this page over a secure connection?</string>
     <string name="toast_backup">Backup data? This will overwrite the old backup.</string>
 
 
