--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="menu_save_home">Save at Home</string>
     <string name="menu_save_login">Save login data</string>
     <string name="menu_save_bookmark">Save as bookmark</string>
-    <string name="menu_save_file">Save File</string>
+    <string name="menu_save_file">Save file</string>
     <string name="menu_save_pdf">Save as PDF</string>
 
     <string name="menu_other_searchSite">Search on site</string>
@@ -139,7 +139,7 @@
         old one. To restore there must be a file with the right name in the directory.</string>
     <string name="clear_menu_done_all">Done all</string>
     <string name="clear_title_quit">Clear on Exit</string>
-    <string name="clear_summary_quit">Every time you quit \"FOSS Browser\" all above checked data will be deleted.</string>
+    <string name="clear_summary_quit">Every time you quit the application, all above checked data will be deleted.</string>
     <string name="clear_title_cache">Clear Cache</string>
     <string name="clear_title_cookie">Clear Cookies</string>
     <string name="clear_summary_cookie">Deletes all cookies, including cookies from whitelisted websites.</string>
@@ -177,7 +177,7 @@
     <string name="setting_summary_nav_show">Hide the \"Navigation Button\" when toolbar is shown.</string>
 
     <string name="setting_title_tab">Start tab</string>
-    <string name="setting_summary_tab">What should be shown at the start of \"FOSS Browser\"? The Start Page, you bookmarks, …</string>
+    <string name="setting_summary_tab">Determine what should be shown at application startup.</string>
 
     <string name="setting_title_confirm_exit">Confirm browser exit</string>
     <string name="setting_summary_confirm_exit">Confirmation dialog when closing browser.</string>
@@ -224,8 +224,7 @@
     <string name="setting_title_license">License</string>
     <string name="setting_summary_license">\"FOSS Browser\" is completely free (as in freedom) and open source.</string>
     <string name="setting_title_appSettings">App settings</string>
-    <string name="setting_summary_appSettings">Open the system app settings for \"FOSS Browser\". There you can,
-        depending on your Android version grant permissions, clear the app data and so on.</string>
+    <string name="setting_summary_appSettings">Open the system app settings.</string>
 
     <!-- Toast -->
     <string name="toast_add_bookmark_successful">Bookmark Successfully Added</string>
@@ -262,15 +261,15 @@
     <string name="toast_entry_exists">Entry exists already.</string>
     <string name="toast_clear">Do you really want to clear?</string>
     <string name="toast_permission_title">Permission is needed</string>
-    <string name="toast_permission_sdCard">\"FOSS Browser\" needs the permission to \"read and write on your storage\". This is needed for
-    downloading files, the build in file manager and taking screenshots. If you don\'t grant the permission yet, you can do it
+    <string name="toast_permission_sdCard">This application needs permission to read and write to your storage. This is required for
+    downloading files and taking screenshots. If you don\'t grant the permission yet, you can do it
     later in the settings.</string>
-    <string name="toast_permission_sdCard_sec">Please grant the permission to \"read and write on your storage\" in the settings.</string>
-    <string name="toast_permission_loc">\"FOSS Browser\" needs the permission to \"access your location\". This is requested from some
+    <string name="toast_permission_sdCard_sec">Please grant the permission to read and write on your storage in the settings.</string>
+    <string name="toast_permission_loc">This application needs permission to access your location. This is requested from some
         websites for example when they offer some kind of navigation. If you don\'t grant the permission yet, you can do it
     later in the settings.</string>
-    <string name="toast_restart">You must restart \"FOSS Browser\" to apply changes. Close now?</string>
-    <string name="toast_quit">Do you want to quit \"FOSS Browser\"?</string>
+    <string name="toast_restart">You must restart the application to apply changes. Close now?</string>
+    <string name="toast_quit">Do you want to quit?</string>
     <string name="toast_close_tab">Do you want to close current tab?</string>
     <string name="toast_closeNotification">Close all opened websites.</string>
     <string name="toast_downloadComplete">Download complete. Open file manager?</string>
